--- a/src/TestInfrastructure/TestInfrastructure.csproj
+++ b/src/TestInfrastructure/TestInfrastructure.csproj
@@ -436,7 +436,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.TestInfrastructure.config" />
+    <None Include="packages.config" />
     <None Include="TestInfrastructure.ruleset" />
   </ItemGroup>
   <ItemGroup>
