--- a/src/Integration.Vsix/packages.config
+++ b/src/Integration.Vsix/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="EnvDTE" version="8.0.0" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.0" targetFramework="net46" />
+  <package id="Google.Protobuf" version="3.2.0" targetFramework="net46" />
+  <package id="Grpc" version="1.2.2" targetFramework="net46" />
+  <package id="Grpc.Core" version="1.2.2" targetFramework="net46" />
+  <package id="Grpc.Tools" version="1.2.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net46" />
@@ -46,6 +50,7 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net46" />
   <package id="System.IO" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net46" />
