--- a/src/Integration.Vsix_2017/packages.config
+++ b/src/Integration.Vsix_2017/packages.config
@@ -4,6 +4,10 @@
   <package id="EnvDTE80" version="8.0.1" targetFramework="net46" />
   <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis" version="2.0.0" targetFramework="net46" />
+  <package id="Google.Protobuf" version="3.2.0" targetFramework="net46" />
+  <package id="Grpc" version="1.2.2" targetFramework="net46" />
+  <package id="Grpc.Core" version="1.2.2" targetFramework="net46" />
+  <package id="Grpc.Tools" version="1.2.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.0.0" targetFramework="net46" />
@@ -50,6 +54,7 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net46" />
   <package id="System.IO" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net46" />
