--- a/src/Integration.UnitTests_2017/packages.config
+++ b/src/Integration.UnitTests_2017/packages.config
@@ -4,6 +4,8 @@
   <package id="EnvDTE" version="8.0.1" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.1" targetFramework="net46" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
+  <package id="Microsoft.Alm.Authentication" version="4.0.0.1" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
