--- a/src/Integration_2017/packages.config
+++ b/src/Integration_2017/packages.config
@@ -5,7 +5,8 @@
   <package id="EnvDTE80" version="8.0.1" targetFramework="net46" />
   <package id="EnvDTE90" version="9.0.1" targetFramework="net46" />
   <package id="EnvDTE90a" version="9.0.1" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.20.301151232" targetFramework="net46" />
+  <package id="Microsoft.Alm.Authentication" version="4.0.0.1" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net46" />
